--- a/src/components/account/settings/styles.sass
+++ b/src/components/account/settings/styles.sass
@@ -74,3 +74,10 @@ $yellow: #ffe552
   border-right-color: rgba(43, 195, 204, 0.23)
 .bs-popover-auto[x-placement^=bottom] .arrow::before, .bs-popover-bottom .arrow::before
   border-bottom-color: rgba(43, 195, 204, 0.23)  
+.change-field
+  position: relative
+  h6
+    position: absolute
+    top: 0
+    left: 10px
+    top: 14px  
