--- a/src/index.sass
+++ b/src/index.sass
@@ -206,7 +206,9 @@ form
         direction: ltr
         text-align: center
     .form-control[readonly]
-        background-color: $white      
+        background-color: $white
+    .form-control:disabled, .form-control[readonly]
+        color: #a9acb4          
     small
         color: $red
         font-size: 10px
