Handle catId in home page, render competitions based on auth

--- a/src/components/categories/styles.sass
+++ b/src/components/categories/styles.sass
@@ -9,7 +9,8 @@
     background-image: url('/assets/images/pages-bg.png')
     background-size: cover
     background-repeat: no-repeat
-    background-position: top center 
+    background-position: top center
+    margin-bottom: 45px 
     .box-img
         position: absolute
         background: #fff
