--- a/src/components/categories/styles.sass
+++ b/src/components/categories/styles.sass
@@ -1,3 +1,10 @@
+.competition-box-empty
+    background: #fff
+    width: 100%
+    border-radius: 8px
+    box-shadow: 0 3px 6px 0 rgba(0, 0, 0, 0.16)
+    height: 100px
+    padding: 10px 15px 10px 15px
 .competition-box
     position: relative
     background: #fff
