--- a/src/index.sass
+++ b/src/index.sass
@@ -91,6 +91,8 @@ p
     border-bottom-left-radius: 5px !important                       
 .en-text
     font-family: MontserratMedium
+.ar-text
+    font-family: "GessMedium"        
 .popover
     font-family: "GessMedium"    
 .dark-text
