Category groups and quick questions list integration

--- a/src/components/categories/styles.sass
+++ b/src/components/categories/styles.sass
@@ -126,6 +126,9 @@
     .question-footer
         padding-left: 10px
         height: 30px
+        position: absolute
+        left: 5px
+        bottom: 0
     .answers-ratio
         background-color: #f4fcfd
         height: 70px
