Ratio in quickQuestions, ui changes

--- a/src/index.sass
+++ b/src/index.sass
@@ -352,6 +352,14 @@ a.btn
     border-top-right-radius: 85px
     border: 5px solid $light-silver
     border-bottom: 0
+.full-circle-border
+    width: 55px
+    height: 55px
+    border-radius: 100%
+    border: 5px solid $light-silver
+    display: flex
+    align-items: center
+    justify-content: center
 .gradient-bg
     width: 70px
     height: 70px
