--- a/src/components/categories/styles.sass
+++ b/src/components/categories/styles.sass
@@ -63,7 +63,7 @@
         padding: 10px 25px 10px 25px
         background-image: linear-gradient(97deg, #2bc3cc, #6c53bf)
 
-.category-group-box
+.shadow-box
     background: #fff
     width: 100%
     border-radius: 12px
@@ -72,6 +72,9 @@
     height: 70px
     padding: 10px 15px 10px 15px
     margin-bottom: 25px
+.shadow-box.custom-height
+    height: 120px
+    margin-bottom: 35px    
 .members-circle
     background-image: linear-gradient(to bottom, #2bc3cc, #6141cc)
     font-size: 12px 
