Refund integration, removed old chat files

--- a/src/index.sass
+++ b/src/index.sass
@@ -407,8 +407,12 @@ a.btn
 .swal-text
     text-align: center
 .accordion__title:hover
-    transition: background-color ease-out 0.3s              
+    transition: background-color ease-out 0.3s
+.btn-width
+    width: 120px                  
 @media only screen and (max-width: 767px)
+    .btn-width
+        width: unset
     .w-25, .w-75, .w-40, .w-35
         width: 100% !important 
     .navbar-light .navbar-toggler
