--- a/src/components/account/subscriptions/transactions/styles.sass
+++ b/src/components/account/subscriptions/transactions/styles.sass
@@ -3,5 +3,7 @@
         flex-direction: column !important
         align-items: unset !important
         justify-content: unset !important
+        margin-top: 10px
         button
             margin-top: 10px
+     
