--- a/src/components/cart/cart.styles.sass
+++ b/src/components/cart/cart.styles.sass
@@ -14,4 +14,8 @@
     .ReactModal__Content.ReactModal__Content--after-open
       width: 95% !important
       height: auto !important
-       
+@media only screen and (max-width: 1024px)
+    .ReactModal__Content.ReactModal__Content--after-open
+      width: 95% !important
+      height: auto !important
+      overflow: scroll !important       
