Updated refund alert msgs

--- a/src/index.sass
+++ b/src/index.sass
@@ -344,7 +344,20 @@ a.btn
 
 .swal-title, .swal-text
     color: $dark-blue      
-
+.swal-footer
+    text-align: center
+.custom-swal-btn
+    background-color: #7cd1f9
+    color: #fff
+    border: none
+    box-shadow: none
+    border-radius: 5px
+    font-weight: 600
+    font-size: 14px
+    padding: 10px 24px
+    margin: 0
+    cursor: pointer  
+     
 .half-circle-border
     width: 150px
     height: 75px
