Added subs loader, exams timer set to 00 onCountDownEnd

--- a/src/components/account/subscriptions/styles.sass
+++ b/src/components/account/subscriptions/styles.sass
@@ -322,7 +322,7 @@ audio:focus
   width: 10px !important
   height: 10px !important 
 .dark-loader  
-  .ball-beat > div 
+  .ball-beat > div, .ball-spin-fade-loader > div 
     background-color: #4b3a85 !important
 .light-loader  
   .ball-beat > div 
