Rendering video hint/solution, forbidden subs case

--- a/src/components/account/settings/styles.sass
+++ b/src/components/account/settings/styles.sass
@@ -10,7 +10,7 @@ $yellow: #ffe552
 .pb-0
   padding-bottom: 0px !important
 .silver-bg
-  background-color: #fbfbfb
+  background-color: #fbfbfb !important
 .badge
    padding: 5px 15px 5px 15px
    font-size: 70%
