--- a/src/index.sass
+++ b/src/index.sass
@@ -129,7 +129,7 @@ p
 .light-bg
     background-color: $light-blue
 .silver-bg
-    background-color: $light-silver
+    background-color: $light-silver !important
 .light-purple-text
     color: $light-purple    
 .off-white-bg
@@ -397,6 +397,7 @@ a.btn
 .box-layout
    border: 1px solid $silver
    border-radius: 5px
+   background-color: $white
 .slick-prev:before, .slick-next:before
    color: $dark-blue
 .slick-list > .slick-track 
