--- a/src/components/home/styles.sass
+++ b/src/components/home/styles.sass
@@ -84,6 +84,7 @@ $off-white: #fefefe
         box-sizing: border-box
         max-width: 450px
         line-height: 20px
+        word-break: break-word
   .image-gallery-thumbnails-wrapper
     max-width: 40%
     height: 520px
@@ -143,7 +144,7 @@ $off-white: #fefefe
           height: 100%
         &.active
           border: 0
-          transform: scale(1.5)
+          transform: scale(1.3)
           .image-gallery-thumbnail-inner
             &::before
               content: ''
@@ -158,7 +159,7 @@ $off-white: #fefefe
               opacity: 0
               -webkit-transform: translate(-50%, -50%)
               transform: translate(-50%, -50%)
-              animation: pulse 2.2s ease-out infinite
+              animation: pulse 1.1s ease-out infinite
               backface-visibility: hidden
               pointer-events: none
             &::after
@@ -174,7 +175,7 @@ $off-white: #fefefe
               opacity: 0
               -webkit-transform: translate(-50%, -50%)
               transform: translate(-50%, -50%)
-              animation: pulse 2.2s ease-out infinite
+              animation: pulse 1.3s ease-out infinite
               backface-visibility: hidden
               pointer-events: none
               animation-delay: 1s
