Guest recording video

--- a/src/components/courses/styles.sass
+++ b/src/components/courses/styles.sass
@@ -178,3 +178,16 @@ $silver: #d7d7d7
   &[aria-expanded='true']:hover .accordion__arrow
     animation-name: move-up
     animation-duration: 1.5s
+
+.outline-label
+  background-color: transparent
+  border: 1px solid #2bc3cc
+  border-radius: 5px
+  padding: 1px 10px 1px 10px
+  margin-right: 8px
+  span
+    font-size: 11px
+    color: #2bc3cc
+    
+    
+   
