Moved transactions list out of content

--- a/src/components/shared/header/styles.sass
+++ b/src/components/shared/header/styles.sass
@@ -76,8 +76,10 @@ $mid-blue: #6c53bf
                padding: 0
             .dropdown-item>a
                 font-size: 11px
-            .dropdown-item:first-child
+            .dropdown-item
                 border-bottom: 0.5px solid #dbdbdb
+            .dropdown-item:last-child
+                border-bottom: none    
             .dropdown-item:focus, .dropdown-item:hover
                 background-color: $white
                 .nav-link
