--- a/src/components/courses/styles.sass
+++ b/src/components/courses/styles.sass
@@ -188,6 +188,21 @@ $silver: #d7d7d7
   span
     font-size: 11px
     color: #2bc3cc
+.close-modal
+  background-color: #f66271
+  border-radius: 50px
+  width: 30px
+  height: 30px
+  display: flex
+  align-items: center
+  justify-content: center
+  position: absolute
+  top: 2px
+  right: 2px
+  z-index: 10
+  padding: 0px
+
+
     
-    
+
    
