--- a/src/components/faq/style.sass
+++ b/src/components/faq/style.sass
@@ -1,135 +1,62 @@
-.faq-accordion .u-position-absolute
-  position: absolute
-
-.faq-accordion .u-position-relative
-  position: relative
-
-.faq-accordion .accordion
-  border: 1px solid rgba(0, 0, 0, 0.1)
-  border-radius: 2px
-
-.faq-accordion .accordion__item + .accordion__item
-  border-top: 1px solid rgba(0, 0, 0, 0.1)
-
-.faq-accordion .accordion__item--has-icon
-  position: relative
-
-.faq-accordion .accordion__title
-  background-color: #f4f4f4
-  color: #444
-  cursor: pointer
-  padding: 18px
-  width: 100%
-  text-align: left
-  border: none
-  &:hover
-    background-color: #ddd
-
-.faq-accordion .accordion__body
-  padding: 20px
-  display: block
-  animation: fadein 0.35s ease-in
-
-.faq-accordion .accordion__body--hidden
-  display: none
-  opacity: 0
-  animation: fadein 0.35s ease-in
-
-.faq-accordion .accordion__title > *:last-child, .accordion__body > *:last-child
-  margin-bottom: 0
-
-.faq-accordion .accordion__arrow
-  display: inline-block
-  position: relative
-  width: 24px
-  height: 12px
-  position: absolute
-  top: 50%
-  right: 0
-  margin-top: -6px
-  &::after
-    display: block
-    position: absolute
-    top: 50%
-    width: 10px
-    height: 2px
-    background-color: currentColor
-    content: ''
-  &::before
-    display: block
-    position: absolute
-    top: 50%
-    width: 10px
-    height: 2px
-    background-color: currentColor
-    content: ''
-    left: 4px
-    transform: rotate(45deg)
-
-[aria-expanded='true'] .accordion__arrow::before, [aria-selected='true'] .accordion__arrow::before
-  transform: rotate(-45deg)
-
-.faq-accordion .accordion__arrow::after
-  right: 4px
-  transform: rotate(-45deg)
-
-[aria-expanded='true'] .accordion__arrow::after, [aria-selected='true'] .accordion__arrow::after
-  transform: rotate(45deg)
-
-.faq-accordion .accordion__arrow
-  &::before, &::after
-    transition: transform 0.25s ease, -webkit-transform 0.25s ease
-
-/* --------------------------------------------------
-/* ---------------- Animation part ------------------
-/* --------------------------------------------------
-
-@keyframes fadein
-  0%
-    opacity: 0
-
-  100%
-    opacity: 1
-
-
-@keyframes move-down
-  0%
-    transform: translateY(0)
-
-  10%
-    transform: translateY(0)
-
-  20%
-    transform: translateY(5px)
-
-  30%
-    transform: translateY(0)
-
-  100%
-    transform: translateY(0)
-
-
-@keyframes move-up
-  0%
-    transform: translateY(0)
-
-  10%
-    transform: translateY(0)
-
-  20%
-    transform: translateY(-5px)
-
-  30%
-    transform: translateY(0)
-
-  100%
-    transform: translateY(0)
-
-
-.faq-accordion .accordion__title--animated
-  &:hover .accordion__arrow
-    animation-name: move-down
-    animation-duration: 1.5s
-  &[aria-expanded='true']:hover .accordion__arrow
-    animation-name: move-up
-    animation-duration: 1.5s
+.faq-section
+  min-height: 100vh
+.faq-title
+  padding-bottom: 60px
+  padding-top: 30px
+.faq
+  background: #FFF
+  box-shadow: 0 2px 48px 0 rgba(0, 0, 0, 0.06)
+  border-radius: 4px
+  .card
+    border: none
+    background: none
+    border-bottom: 1px dashed rgba(75, 58, 133, 0.4)
+    border-radius: 0px
+    .card-header
+      padding: 0px
+      border: none
+      background: none
+      -webkit-transition: all 0.3s ease 0s
+      -moz-transition: all 0.3s ease 0s
+      -o-transition: all 0.3s ease 0s
+      transition: all 0.3s ease 0s
+      &:hover
+        background: #f7f7f7
+        padding-left: 10px
+      .faq-title
+        width: 100%
+        padding: 12px 15px 12px 15px
+        text-decoration: none !important
+        -webkit-transition: all 0.3s ease 0s
+        -moz-transition: all 0.3s ease 0s
+        -o-transition: all 0.3s ease 0s
+        transition: all 0.3s ease 0s
+        cursor: pointer
+        display: flex
+        align-items: center
+        margin-bottom: 0px
+        .badge
+          width: 25px
+          height: 25px
+          -webkit-border-radius: 100%
+          -moz-border-radius: 100%
+          border-radius: 100%
+          text-align: center
+          background: rgba(75, 58, 133, 0.5)
+          color: #fff
+          font-size: 12px
+          margin-left: 10px
+          display: flex
+          align-items: center
+          justify-content: center
+          padding: 0px
+    .card-body
+      padding: 15px 20px 15px 20px
+      border-top: 1px solid #F3F8FF
+ 
+@media (max-width: 991px)
+  .faq
+    margin-bottom: 30px
+    .card .card-header .faq-title
+      line-height: 26px
+      margin-top: 10px
