added loader on voice note send

--- a/src/components/account/subscriptions/styles.sass
+++ b/src/components/account/subscriptions/styles.sass
@@ -227,6 +227,12 @@
 .ball-clip-rotate> div
   border: 2px solid #9786d2 !important
   border-bottom-color: transparent !important
+.light-loader
+  .ball-clip-rotate> div
+    border: 2px solid #2bc3cc !important
+    border-bottom-color: transparent !important
+    width: 15px !important
+    height: 15px !important    
 audio:focus
   outline: none
 
