progress bar in chat when sending messages

--- a/src/components/account/subscriptions/styles.sass
+++ b/src/components/account/subscriptions/styles.sass
@@ -375,3 +375,10 @@ audio:focus
       &:hover
         border-color: transparent
 
+.progress-bar
+  background-color: transparent
+  direction: ltr
+  .rect-progress-bar-percent
+    display: none !important
+  .inner-rect-bar
+    background-color: #109201 !important  
