minimum 5 chars name validation

--- a/src/components/account/subscriptions/styles.sass
+++ b/src/components/account/subscriptions/styles.sass
@@ -381,4 +381,4 @@ audio:focus
   .rect-progress-bar-percent
     display: none !important
   .inner-rect-bar
-    background-color: #109201 !important  
+    background-color: #2bc3cc !important  
