STUD-119 Modifications to the exam view

--- a/src/index.sass
+++ b/src/index.sass
@@ -121,7 +121,9 @@ p
 .light-silver-text
     color: #fbfbfb
 .green-text
-    color: #109201            
+    color: #109201  
+.white-text
+    color: #f8f9fa !important           
 .dark-bg
     background: $dark-blue
 .mid-bg
