STUD-119 solved the comments on pull request

--- a/src/index.sass
+++ b/src/index.sass
@@ -121,15 +121,13 @@ p
 .light-silver-text
     color: #fbfbfb
 .green-text
-    color: #109201  
-.white-text
-    color: #f8f9fa !important           
+    color: #109201            
 .dark-bg
     background: $dark-blue
 .mid-bg
     background: $mid-blue    
 .light-bg
-    background-color: $light-blue
+    background-color: $light-blue !important
 .silver-bg
     background-color: $light-silver !important
 .light-purple-text
