Fixed agreement modal scrolling issues

--- a/src/components/cart/cart.styles.sass
+++ b/src/components/cart/cart.styles.sass
@@ -13,9 +13,9 @@
           margin-top: 15px
     .ReactModal__Content.ReactModal__Content--after-open
       width: 95% !important
-      height: auto !important
+      height: 80% !important
 @media only screen and (max-width: 1024px)
     .ReactModal__Content.ReactModal__Content--after-open
       width: 95% !important
-      height: auto !important
+      height: 80% !important
       overflow: scroll !important       
