--- a/src/components/categories/styles.sass
+++ b/src/components/categories/styles.sass
@@ -95,11 +95,36 @@
     display: inline-flex
     align-items: center
     justify-content: center
-    margin-left: 10px
+    margin-left: -40px
+    z-index: 10
     img
         object-fit: contain
-        height: 16px
+        height: 23px
         width: 100%
+.title-groups
+    color: #fff !important
+    background-color: #f66271 
+    border: 1px solid 
+    border-radius: 20px
+    padding-bottom: 7px
+    padding-left: 10px
+    padding-top: 7px
+    padding-right: 10px
+
+.icon-circle
+    background-color: #fff
+    width: 90px
+    height: 90px
+    box-shadow: 0 3px 6px 0 rgba(0, 0, 0, 0.16)
+    border-radius: 50px
+    display: inline-flex
+    align-items: center
+    justify-content: center
+    img
+        object-fit: contain
+        height: 45px
+        width: 100%
+    
 .question-card
     position: relative
     width: 100%
