STUD-185 Change groups page layout (not UI)

--- a/src/index.sass
+++ b/src/index.sass
@@ -401,9 +401,9 @@ a.btn
    border-radius: 5px
    background-color: $white
 .question-box-layout
-   border: 1px solid #A8EBEF
+   border: 1px solid #2bc3cc
    border-radius: 20px
-   background-color: #A8EBEF
+   background-color: #2bc3cc
 .slick-prev:before, .slick-next:before
    color: $dark-blue
 .slick-list > .slick-track 
