encoded stems/choices

--- a/src/components/account/subscriptions/styles.sass
+++ b/src/components/account/subscriptions/styles.sass
@@ -382,3 +382,6 @@ audio:focus
     display: none !important
   .inner-rect-bar
     background-color: #2bc3cc !important  
+.encoded-text
+  p, blockquote
+    margin-bottom: 0px    
