STUD-189 End of line letter is cropped

--- a/src/components/account/subscriptions/styles.sass
+++ b/src/components/account/subscriptions/styles.sass
@@ -384,4 +384,5 @@ audio:focus
     background-color: #2bc3cc !important  
 .encoded-text
   p, blockquote
-    margin-bottom: 0px    
+    margin-bottom: 0px   
+    word-break: normal 
