STUD-205 initiative UI

--- a/src/components/categories/styles.sass
+++ b/src/components/categories/styles.sass
@@ -101,16 +101,46 @@
         object-fit: contain
         height: 23px
         width: 100%
+.number-circle
+    background-color: #4a3985
+    width: 40px
+    height: 40px
+    box-shadow: 0 3px 6px 0 rgba(0, 0, 0, 0.16)
+    border-radius: 50px
+    display: inline-flex
+    align-items: center
+    justify-content: center
+    margin-left: -40px
+    z-index: 10
+    h4
+        object-fit: contain
+        height: 23px
+        color: #fff
 .title-groups
     color: #fff !important
     background-color: #f66271 
-    border: 1px solid 
+    border: 1px solid #4a3985
     border-radius: 20px
     padding-bottom: 7px
     padding-left: 10px
     padding-top: 7px
     padding-right: 10px
-
+.input-model
+    color: #4a3985 !important
+    border: 2px solid #4a3985
+    border-radius: 20px
+    margin-right: 50px;
+.label-model
+    color: #4a3985 !important
+    margin-right: 50px;
+.role-groups
+    color: #343532 !important
+    background-color: #f66271 
+    border-radius: 20px
+    padding-bottom: 7px
+    padding-left: 10px
+    padding-top: 7px
+    padding-right: 10px
 .icon-circle
     background-color: #fff
     width: 90px
@@ -124,7 +154,19 @@
         object-fit: contain
         height: 45px
         width: 100%
-    
+.initiative-icon-circle
+    background-color: #fff;
+    width: 175px;
+    height: 175px;
+    box-shadow: 0 3px 6px 0 rgba(0, 0, 0, 0.16);
+    border-radius: 100px;
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    img
+        object-fit: contain
+        height: 85px
+        width: 100%
 .question-card
     position: relative
     width: 100%
@@ -187,10 +229,4 @@
     &.success
         background-color: #2bc3cc
     &.failure
-        background-color: #f66271
-
-    
-
-            
-
-           
+        background-color: #f66271  
