--- a/src/index.sass
+++ b/src/index.sass
@@ -11,6 +11,7 @@ $off-white: #fefefe
 $light-purple: #ddd6f2
 $light-yellow: #FDE67B
 $light-blue: #A8EBEF
+$ultra-blue: #249db0
 
 @font-face 
     font-family: GessLight 
@@ -112,6 +113,8 @@ p
     word-break: break-word        
 .light-text
     color: $light-blue
+.ultra-text
+    color: $ultra-blue
 .red-text
     color: $red
 .red-bg
@@ -331,8 +334,6 @@ a.btn
         background-color: $light-blue
         border: 1px solid $light-blue
         color: $dark-blue
-
-
 .light-blue-btn
     background-color: $light-blue;
     border-color: $light-blue;
@@ -342,7 +343,6 @@ a.btn
         background-color: $light-blue
         border: 1px solid $light-blue
         color: $white
-
 .intl-tel-input
     direction: ltr
     width: 100%
@@ -395,7 +395,6 @@ a.btn
     padding: 10px 24px
     margin: 0
     cursor: pointer  
-     
 .half-circle-border
     width: 150px
     height: 75px
@@ -527,4 +526,15 @@ a.btn
    border-radius: 20px
    height: 150px
    margin-bottom: 40px;
- 
+.share-label
+    background-color: #FDE67B
+    width: 35px;
+    height: 35px;
+    border-radius: 50px
+    display: inline-flex
+    align-items: center
+    margin-left: 20px
+    img
+        object-fit: contain
+        height: 23px
+        width: 100%
