WIP initiative UI

--- a/src/index.sass
+++ b/src/index.sass
@@ -538,3 +538,9 @@ a.btn
         object-fit: contain
         height: 23px
         width: 100%
+.testimonials-title
+  position: absolute;
+  top: 50%;
+  width: 100%;
+  text-align: center;
+  font-size: 40px;
