--- a/src/index.sass
+++ b/src/index.sass
@@ -327,7 +327,7 @@ a.btn
     border-radius: 80px
     border: 1px solid $light-blue
     color: $dark-blue
-    height: 40px
+    height: 100%
     font-size: 13px
     background-color: $light-blue  
     &:hover, &:focus
@@ -544,3 +544,18 @@ a.btn
   width: 100%;
   text-align: center;
   font-size: 40px;
+
+.font-size-60
+    font-size: 60px
+
+.font-size-30
+    font-size: 30px
+
+.font-size-20
+    font-size: 20px
+
+.font-size-50
+    font-size: 50px
+
+.font-size-40
+    font-size: 40px
