--- a/src/components/categories/styles.sass
+++ b/src/components/categories/styles.sass
@@ -119,7 +119,7 @@
 .title-groups
     color: #fff !important
     background-color: #f66271 
-    border: 1px solid #4a3985
+    border: 1px solid #fff
     border-radius: 20px
     padding-bottom: 7px
     padding-left: 10px
