--- a/src/index.sass
+++ b/src/index.sass
@@ -559,3 +559,27 @@ a.btn
 
 .font-size-40
     font-size: 40px
+.center 
+  position: absolute;
+  bottom: 8px;
+  text-align: center;
+  font-size: 18px;
+
+.bottom-left 
+    position: absolute;
+    bottom: -109px;
+    left: 62px;
+    .center 
+.center-right
+    position: absolute;
+    right: 425px;
+    top: 0px;
+
+.yellow-div
+    border-radius: 50px
+    border: 1px solid $light-yellow
+    color: $dark-blue
+    height: 40px
+    background-color: $light-yellow
+
+
