--- a/src/index.sass
+++ b/src/index.sass
@@ -148,6 +148,9 @@ p
     object-position: left
 .contain-img
     object-fit: contain
+.testimonial-contain-img
+    object-fit: contain
+    opacity: 0.4
 .smaller
     font-size: 65% !important
 .font-16
@@ -443,6 +446,11 @@ a.btn
    border: 1px solid #2bc3cc
    border-radius: 20px
    height: 250px
+.home-categories-box-layout
+    border: 3px solid #2bc3cc;
+    border-radius: 30px;
+    height: 250px;
+    width: 200px;
 .slick-prev:before, .slick-next:before
    color: $dark-blue
 .slick-list > .slick-track 
@@ -544,6 +552,7 @@ a.btn
   width: 100%;
   text-align: center;
   font-size: 40px;
+  padding-left: 45px;
 
 .font-size-40
     font-size: 40px
