--- a/src/index.sass
+++ b/src/index.sass
@@ -442,15 +442,23 @@ a.btn
    border: 1px solid #2bc3cc
    border-radius: 20px
    background-color: #2bc3cc
+
 .categories-box-layout
    border: 1px solid #2bc3cc
    border-radius: 20px
-   height: 250px
+
+.initiative-categories-box-layout
+   border: 1px solid #2bc3cc
+   border-radius: 20px
+   min-height: 300px;
+   padding: 5px
+
 .home-categories-box-layout
     border: 3px solid #2bc3cc;
     border-radius: 30px;
     height: 250px;
     width: 200px;
+
 .slick-prev:before, .slick-next:before
    color: $dark-blue
 .slick-list > .slick-track 
